--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -20,8 +20,7 @@
       background-repeat: no-repeat;
 
       @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-        background-image: url("/img/index-background-desktop@2x.jpg");
-        background-size: 100% auto;
+        background-size: cover;
       }
     }
   }
