--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -141,7 +141,7 @@
   right: 15px;
   fill: $dark-2;
 
-  @media (min-width: $screen-desktop) {
+  @media (min-width: $screen-tablet) {
     top: 19px;
     right: 20px;
   }
@@ -376,7 +376,9 @@ input {
 
   @media (min-width: $screen-tablet) {
     &:not(:first-child) {
-      margin-left: 40px;
+      margin-left: 30px;
+      padding-left: 40px;
+      // margin-left: 40px;
     }
 
     &:nth-of-type(2) {
@@ -430,7 +432,7 @@ input {
       margin-top: 20px;
       margin-bottom: 0;
       padding-left: 70px;
-      padding-right: 70px;
+      padding-right: 65px;
     }
 
     @media (min-width: $screen-desktop) {
