--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -18,9 +18,11 @@
       height: 100%;
       background-image: url("/img/index-background-desktop@1x.jpg");
       background-repeat: no-repeat;
+      background-size: cover;
 
       @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-        background-size: cover;
+        background-image: url("/img/index-background-desktop@2x.jpg");
+
       }
     }
   }
