--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -19,7 +19,8 @@
     top: 99px;
     z-index: 2;
     width: 570px;
-    height: 201px;
+    min-height: 201px;
+    // height: 201px;
     background-color: #ffffff;
     padding-left: 75px;
     padding-right: 79px;
