--- a/source/sass/blocks/basic.scss
+++ b/source/sass/blocks/basic.scss
@@ -33,7 +33,8 @@
   @media (min-width: $screen-desktop) {
 
     width: 1300px;
-    height: 550px;
+    min-height: 550px;
+    // height: 550px;
     margin: 0 auto;
     padding-top: 104px;
   }
