--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -34,7 +34,7 @@
     @include b-image("icon-close.svg");
 
     &--off {
-      background-image: url("/img/icon-mobile-menu.svg");
+      background-image: url("../img/icon-mobile-menu.svg");
     }
   }
 }
