--- a/source/sass/blocks/basic.scss
+++ b/source/sass/blocks/basic.scss
@@ -13,7 +13,7 @@
     @include b-image("index-background-mobile@1x.jpg");
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("/img/index-background-mobile@2x.jpg");
+      background-image: url("../img/index-background-mobile@2x.jpg");
       background-size: 100% auto;
     }
   }
