--- a/source/sass/blocks/function.scss
+++ b/source/sass/blocks/function.scss
@@ -94,7 +94,7 @@
     @include b-image ("advantage-leaf@1x.png", $green-2,  center);
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("/img/advantage-leaf@2x.png");
+      background-image: url("../img/advantage-leaf@2x.png");
     }
   }
 
@@ -102,7 +102,7 @@
     @include b-image ("advantage-powder@1x.png", $green-2, center);
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("/img/advantage-powder@2x.png");
+      background-image: url("../img/advantage-powder@2x.png");
     }
   }
 
@@ -110,7 +110,7 @@
     @include b-image ("advantage-dining@1x.png", $green-2,  center);
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("/img/advantage-dining@2x.png");
+      background-image: url("../img/advantage-dining@2x.png");
     }
   }
 
@@ -118,7 +118,7 @@
     @include b-image ("advantage-clock@1x.png", $green-2, center);
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("/img/advantage-clock@2x.png");
+      background-image: url("../img/advantage-clock@2x.png");
     }
   }
 
