--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -16,12 +16,12 @@
       z-index: -1;
       width: 50%;
       height: 100%;
-      background-image: url("/img/index-background-desktop@1x.jpg");
+      background-image: url("../img/index-background-desktop@1x.jpg");
       background-repeat: no-repeat;
       background-size: cover;
 
       @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-        background-image: url("/img/index-background-desktop@2x.jpg");
+        background-image: url("../img/index-background-desktop@2x.jpg");
       }
     }
   }
