--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -179,6 +179,7 @@
   text-transform: uppercase;
   outline: none;
   border: solid 1px rgba($grey-4, 0.5);
+  resize: none;
 
   &:hover {
     border: solid 1px rgba($grey-4, 1);
@@ -257,6 +258,9 @@
 
   &--program .form__label {
     margin-bottom: 13px;
+    &:active {
+      opacity: 0.3;
+    }
   }
 
   &--checkbox {
