--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -101,6 +101,9 @@
 
     @media (min-width: $screen-desktop) {
       margin-bottom: 45px;
+      padding-top: 23px;
+      padding-bottom: 42px;
+      letter-spacing: -0.1px;
     }
   }
 
