--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -157,9 +157,9 @@
   position: relative;
   display: flex;
   align-items: flex-end;
-  min-height: 289px;
+  margin-top: auto;
   margin: 0;
-  padding-top: 65px;
+  padding-top: 189px;
   padding-bottom: 40px;
   padding-left: 55px;
   padding-right: 55px;
@@ -178,6 +178,7 @@
 
   @media (min-width: $screen-tablet) {
     min-height: 200px;
+    padding-top: 63px;
     padding-right: 118px;
     padding-bottom: 61px;
 
@@ -203,8 +204,7 @@
 
   @media (min-width: $screen-desktop) {
     width: 245px;
-    min-height: 290px;
-    padding-top: 65px;
+    padding-top: 185px;
     padding-right: 30px;
     padding-bottom: 45px;
     padding-left: 40px;
