--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -21,7 +21,7 @@
     top: 540px;
     left: 50%;
     transform: translateX(-284px);
-    width: auto;
+    width: 570px;
   }
 
   @media (min-width: $screen-desktop) {
