--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -238,6 +238,10 @@
       height: auto;
       flex-shrink: 0;
     }
+
+    @media (min-width: $screen-desktop) {
+      width: 245px;
+    }
   }
 }
 
