--- a/source/sass/blocks/illustration.scss
+++ b/source/sass/blocks/illustration.scss
@@ -114,10 +114,12 @@
   }
 
   @media (min-width: $screen-desktop) {
+    box-shadow: inset 0 0 2px black;
     width: 610px;
     min-height: 652px;
     margin: 0;
     padding: 0;
+    padding-left: 40px;
   }
 }
 
@@ -127,10 +129,12 @@
     background-image: linear-gradient(to right, $grey-1 0%, #f2f2f2 50%, #eaeaea 50%, #eaeaea 100%);
     background-position: 0 170px;
     background-repeat: no-repeat;
+    box-shadow: inset 0 0 1px red;
   }
 
   @media (min-width: $screen-desktop) {
-    width: 610px;
+    width: 690px;
+
     padding: 0;
     min-height: 652px;
     background-image: linear-gradient(to right, $grey-1 0%, #f2f2f2 53%, #eaeaea 53%, #eaeaea 100%);
