--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -203,6 +203,7 @@
 
   @media (min-width: $screen-desktop) {
     width: 245px;
+    margin-bottom: 0;
     padding-top: 185px;
     padding-right: 30px;
     padding-bottom: 45px;
