--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -143,6 +143,7 @@
 
     &:last-of-type {
       align-self: flex-end;
+      margin-top: 138px;
       background: transparent;
       border: 1px solid $grey-2;
     }
