--- a/source/sass/blocks/basic.scss
+++ b/source/sass/blocks/basic.scss
@@ -66,9 +66,11 @@
   color: #ffffff;
 
   @media (min-width: $screen-tablet) {
+    width: 450px;
     margin-bottom: 42px;
 
     @include font (20, 1);
+    text-align: left;
     color: $dark-3;
   }
 
