--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -51,6 +51,19 @@
   @media (min-width: $screen-desktop) {
     margin-bottom: 21px;
   }
+
+  &--radio,
+  &--checkbox {
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 45px;
+
+    @media (min-width: $screen-tablet) {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 60px;
+    }
+  }
 }
 
 .form__input {
@@ -153,7 +166,10 @@
 
   &::before {
     content: "";
-    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    // display: block;
     width: 30px;
     height: 30px;
     margin-right: 15px;
@@ -315,13 +331,16 @@
 }
 
 .form__checkbox {
-  position: relative;
+  // position: relative;
   display: flex;
   align-items: center;
 
   &::before {
     content: "";
-    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    // display: block;
     width: 30px;
     height: 30px;
     margin-right: 15px;
