--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -2,7 +2,7 @@
   @media (min-width: $screen-desktop) {
     position: relative;
     z-index: 1;
-    height: 695px;
+    min-height: 695px;
     margin: 0 auto;
     margin-bottom: 82px;
     padding-top: 50px;
@@ -18,6 +18,7 @@
       height: 100%;
       background-image: url("../img/index-background-desktop@1x.jpg");
       background-repeat: no-repeat;
+      background-position: center;
       background-size: cover;
 
       @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
